Fix slider height on mobile

--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -11,7 +11,7 @@ header {
 .mainslider {
   .h-\[calc\(100vh-89px\)\] {
     @media (max-width: 767px) {
-      height: 400px;
+      height: 170px;
     }
   }
 }
